# htmx_rust_opus

./: .database.sql  .gitignore  .prettierignore  Cargo.toml  Makefile  action.yml  docker-compose.yml
.github/workflows/: action.yml
migrations/: 20240426111325_init.sql  20240501195346_openweather_data.sql  20240502122627_openweather_history_table.sql  20240608183409_tools_chat.sql  20240608191007_tools_chat_idx.sql
src/: main.rs
src/pages/: auth.rs  components.rs  dashboard.rs  dashboard_props.rs  index.rs  login.rs  mod.rs  settings.rs  templates.rs
src/pages/auth/: auth_jwt.rs  auth_pages.rs  auth_services.rs  auth_templates.rs  mod.rs
src/pages/dashboard/: dashboard_pages.rs  dashboard_templates.rs  mod.rs
src/pages/dashboard/tools/: chat.rs
src/pages/general/: general_services.rs  general_templates.rs  mod.rs
src/pages/settings/: mod.rs  settings_pages.rs  settings_services.rs  settings_templates.rs  weather.rs
src/services/: auth.rs  client.rs  database.rs  jwt_auth.rs  mariage.rs  mod.rs  routes.rs  settings.rs  weather.rs
src/structs/: auth.rs  database.rs  enums.rs  jwt_token.rs  mod.rs  open_ai.rs  regex.rs  user.rs
src/structs/entity/: mod.rs  user.rs  visit.rs  weather.rs
statics/: dashboard.css  global.css  index.css  login.css
statics/components/: inputs.css
statics/components/auth/: auth.css  login.css
statics/components/inputs/: button.css  textfield.css
statics/css/: dashboard.css  global.css  index.css  settings.css
statics/css/components/: feedback.css  inputs.css  tools.css
statics/css/components/auth/: auth.css
templates/: dashboard.html  dashboard_props.html  index.html  login.html
templates/components/: snackbar.html
templates/components/auth/: login.html  loginSuccess.html  register.html
templates/components/dashboard/: home.html  tools.html
templates/components/dashboard/home/: home-weather.html  home.html
templates/components/index/: cards.html  grid.html  visit.html
templates/components/inputs/: button.html  textfield.html
templates/components/layout/: configuration-page.html  loader.html  styles.html  top-bar-menu.html  top-bar.html
templates/components/settings/: profile.html
templates/components/tools/: chat.html  main.html
templates/components/tools/chat/: user_item.html
templates/components/wasm/: main.html
templates/pages/: auth.html  dashboard.html  index.html  settings.html
wasm/: ft_paint.js  ft_paint_bg.wasm  without_a_bundler.js  without_a_bundler_bg.wasm
