[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "serde", "serde-json", "markdown"] }
askama_axum = "0.4.0"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
bcrypt = "0.15.0"
chrono = "0.4.34"
clap = { version = "4.4.18", features = ["derive", "env"] }
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "macros"] }
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
